# middleware/validate.js
@@ -1,12 +1,10 @@
 const validator = require('../helpers/validate');
 
-const saveContact = (req, res, next) => {
+const saveUser = (req, res, next) => {
   const validationRule = {
-    firstName: 'required|string',
-    lastName: 'required|string',
     email: 'required|email',
-    favoriteColor: 'required|string',
-    birthday: 'string'
+    passwordHash: 'required|string',
+    name: 'required|string'
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
@@ -21,6 +19,29 @@ const saveContact = (req, res, next) => {
   });
 };
 
+const saveBudget = (req, res, next) => {
+  const validationRule = {
+    userId: 'required|string|regex:/^[a-zA-Z0-9]+$/', // Alphanumeric check for userId
+    month: 'required|string', // Ensure it is a valid string
+    income: 'required|numeric|min:0|regex:/^\\d+(\\.\\d{1,2})?$/', // Numeric with up to two decimals
+    savings: 'required|numeric|min:0|regex:/^\\d+(\\.\\d{1,2})?$/', // Numeric with up to two decimals
+    expenses: 'required|numeric|min:0|regex:/^\\d+(\\.\\d{1,2})?$/' // Numeric with up to two decimals
+  };
+
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
-  saveContact
+  saveUser,
+  saveBudget
 };
